--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/pongpong-labs/Vision-Server#readme",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "mysql": "github:mysqljs/mysql",
     "mysql2": "^2.1.0",
     "swagger-jsdoc": "^4.0.0",
